--- a/admin/index.html
+++ b/admin/index.html
@@ -4,6 +4,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+  <link rel="shortcut icon" href="/assets/imagens/favicon.ico" type="image/x-icon">
+  <meta name="theme-color" content="#0a1e3a">
   <title>Administração</title>
 </head>
 <body>
