--- a/admin/index.html
+++ b/admin/index.html
@@ -34,13 +34,15 @@
           label: 'Botão',
           name: 'botaobloco',
           widget: 'string',
-          required: false
+          required: false,
+          default: ''
         },
         {
           label: 'Link do botão',
           name: 'linkbloco',
           widget: 'string',
-          required: false
+          required: false,
+          default: ''
         },
         {
           label: "Ícone",
@@ -73,7 +75,7 @@
         };
       },
       toBlock: function (obj) {
-        return '<section class="bloco" id="' + obj.titulobloco + '"><h2>' + obj.titulobloco + '</h2><p>' + obj.textobloco + '</p>' + obj.iconebloco + '<button><a href="' + obj.linkbloco + '>' + obj.botaobloco + '</a></button></section>';
+        return '<section class="bloco" id="' + obj.titulobloco + '"><h2>' + obj.titulobloco + '</h2><p>' + obj.textobloco + '</p>' + obj.iconebloco + '<button><a href="' + obj.linkbloco + '">' + obj.botaobloco + '</a></button></section>';
       }
     });
 
