Correções no CSS e componentes

--- a/admin/index.html
+++ b/admin/index.html
@@ -86,7 +86,7 @@
       fields: [
         {
           label: 'ID da Nuvem',
-          name: 'idnuvemm',
+          name: 'idnuvem',
           widget: 'string',
           default: ' '
         },
