Adicionando default no componente Cards

--- a/admin/index.html
+++ b/admin/index.html
@@ -489,68 +489,77 @@
           label: 'Imagem 1',
           name: 'imagemdiretoria1',
           widget: 'image',
-          default: '/assets/imagens/uploads/padrao.png'
+          default: ''
         },
         {
           label: 'Nome 1',
           name: 'nomediretoria1',
-          widget: 'string'
+          widget: 'string',
+          default: ''
         },
         {
           label: 'Cargo 1',
           name: 'cargodiretoria1',
-          widget: 'string'
+          widget: 'string',
+          default: ''
+          
         },
         /* Item 2 */
         {
           label: 'Imagem 2',
           name: 'imagemdiretoria2',
           widget: 'image',
-          default: '/assets/imagens/uploads/padrao.png'
+          default: ''
         },
         {
           label: 'Nome 2',
           name: 'nomediretoria2',
-          widget: 'string'
+          widget: 'string',
+          default: ''
         },
         {
           label: 'Cargo 2',
           name: 'cargodiretoria2',
-          widget: 'string'
+          widget: 'string',
+          default: ''
         },
         /* Item 3 */
         {
           label: 'Imagem 3',
           name: 'imagemdiretoria3',
           widget: 'image',
-          default: '/assets/imagens/uploads/padrao.png'
+          default: ''
         },
         {
           label: 'Nome 3',
           name: 'nomediretoria3',
-          widget: 'string'
+          widget: 'string',
+          default: ''
         },
         {
           label: 'Cargo 3',
           name: 'cargodiretoria3',
-          widget: 'string'
+          widget: 'string',
+          default: ''
         },
         /* Item 4 */
         {
           label: 'Imagem 4',
           name: 'imagemdiretoria4',
           widget: 'image',
-          default: '/assets/imagens/uploads/padrao.png'
+          default: ''
         },
         {
           label: 'Nome 4',
           name: 'nomediretoria4',
-          widget: 'string'
+          widget: 'string',
+          default: ''
         },
         {
           label: 'Cargo 4',
           name: 'cargodiretoria4',
-          widget: 'string'
+          widget: 'string',
+          default: ''
         }
       ],
       pattern: /^<section class="minicards" id="(.*?)"> <div class="corpo-minicards"> <div class="item-minicards"> <div class="minicards-imagem"> <img src="(.*?)"> <\/div> <div class="descricao-minicards"> <h3 class="titulo-item-minicards">(.*?)<\/h3> <p class="cargo-minicards">(.*?)<\/p> <\/div> <\/div> <div class="item-minicards"> <div class="minicards-imagem"> <img src="(.*?)"> <\/div> <div class="descricao-minicards"> <h3 class="titulo-item-minicards">(.*?)<\/h3> <p class="cargo-minicards">(.*?)<\/p> <\/div> <\/div> <div class="item-minicards"> <div class="minicards-imagem"> <img src="(.*?)"> <\/div> <div class="descricao-minicards"> <h3 class="titulo-item-minicards">(.*?)<\/h3> <p class="cargo-minicards">(.*?)<\/p> <\/div> <\/div> <div class="item-minicards"> <div class="minicards-imagem"> <img src="(.*?)"> <\/div> <div class="descricao-minicards"> <h3 class="titulo-item-minicards">(.*?)<\/h3> <p class="cargo-minicards">(.*?)<\/p> <\/div> <\/div> <\/div><\/section>*$/,
