Correções no CSS

--- a/admin/index.html
+++ b/admin/index.html
@@ -482,7 +482,8 @@
         {
           label: 'ID dos itens',
           name: 'iddiretoria',
-          widget: 'string'
+          widget: 'string',
+          default: ''
         },
         /* Item 1 */
         {
