Correção no id/label do Contato

--- a/admin/index.html
+++ b/admin/index.html
@@ -622,8 +622,8 @@
 
     /* Contato */
     CMS.registerEditorComponent({
-      id: "separador",
-      label: "Separador",
+      id: "Contato",
+      label: "Contato",
       fields: [
         {
           label: "Coordenadas",
