--- a/admin/index.html
+++ b/admin/index.html
@@ -56,7 +56,7 @@
         {
           label: 'Texto do bloco',
           name: 'textobloco',
-          widget: 'text'
+          widget: 'string'
         },
         {
           label: 'Botão',
@@ -146,7 +146,7 @@
         {
           label: 'Texto do item 1',
           name: 'textonuvem1',
-          widget: 'text',
+          widget: 'string',
           default: ''
         },
         /* Item 2 */
@@ -177,7 +177,7 @@
         {
           label: 'Texto do item 2',
           name: 'textonuvem2',
-          widget: 'text',
+          widget: 'string',
           default: ''
         },
         /* Item 3 */
@@ -208,7 +208,7 @@
         {
           label: 'Texto do item 3',
           name: 'textonuvem3',
-          widget: 'text',
+          widget: 'string',
           default: ''
         },
         /* Item 4 */
@@ -239,7 +239,7 @@
         {
           label: 'Texto do item 4',
           name: 'textonuvem4',
-          widget: 'text',
+          widget: 'string',
           default: ''
         },
         /* Item 5 */
@@ -270,7 +270,7 @@
         {
           label: 'Texto do item 5',
           name: 'textonuvem5',
-          widget: 'text',
+          widget: 'string',
           default: ''
         },
         /* Item 6 */
@@ -301,7 +301,7 @@
         {
           label: 'Texto do item 6',
           name: 'textonuvem6',
-          widget: 'text',
+          widget: 'string',
           default: ''
         }
       ],
@@ -380,7 +380,7 @@
         {
           label: 'Texto do item 1',
           name: 'textocards1',
-          widget: 'text',
+          widget: 'string',
           default: ''
         },
         /* Item 2 */
@@ -411,7 +411,7 @@
         {
           label: 'Texto do item 2',
           name: 'textocards2',
-          widget: 'text',
+          widget: 'string',
           default: ''
         },
         /* Item 3 */
@@ -442,7 +442,7 @@
         {
           label: 'Texto do item 3',
           name: 'textocards3',
-          widget: 'text',
+          widget: 'string',
           default: ''
         },
         /* Item 4 */
@@ -473,7 +473,7 @@
         {
           label: 'Texto do item 4',
           name: 'textocards4',
-          widget: 'text',
+          widget: 'string',
           default: ''
         }
       ],
@@ -638,7 +638,7 @@
           default: '',
         },
       ],
-      pattern: /^<div class="container-contato"> <form class="formulario" data-np-checked="1" data-netlify="true"> <div class="container-form-esquerda"> <input class="input" type="text" placeholder="\* Nome" data-np-checked="1"> <input class="input" type="email" placeholder="\* E-mail" data-np-checked="1"> <input class="input" type="tel" placeholder="\* Telefone" data-np-checked="1"> <input class="input" type="text" placeholder="\* Assunto" data-np-checked="1"> <\/div> <div class="container-form-direita"> <textarea class="input mensagem" placeholder="\* Sua mensagem\.\.\."><\/textarea> <button class="button-form">Enviar<\/button> <\/div> <\/form> <div style="flex: 1 1 45%; max-width: 300px; margin: 0 auto;"> <div class="mapouter"> <div class="gmap_canvas"> <iframe width="300" height="300" id="gmap_canvas" src="https:\/\/maps.google.com\/maps\?q=(.*)&amp;t=&amp;z=15&amp;ie=UTF8&amp;iwloc=&amp;output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"><\/iframe> <style> \.mapouter { position: relative; text-align: right; height: 300px; width: 300px; } \.gmap_canvas { overflow: hidden; background: none !important; height: 300px; width: 300px; } <\/style> <\/div> <\/div><\/div> <div class="endereco-telefone"> <p>(.*?)<\/p> <\/div><\/div>$/,
+      pattern: /^<div class="container-contato"> <form class="formulario" data-np-checked="1" data-netlify="true"> <div class="container-form-esquerda"> <input class="input" type="text" placeholder="\* Nome" data-np-checked="1"> <input class="input" type="email" placeholder="\* E-mail" data-np-checked="1"> <input class="input" type="tel" placeholder="\* Telefone" data-np-checked="1"> <input class="input" type="text" placeholder="\* Assunto" data-np-checked="1"> <\/div> <div class="container-form-direita"> <textarea class="input mensagem" placeholder="\* Sua mensagem\.\.\."><\/textarea> <button class="button-form">Enviar<\/button> <\/div> <\/form> <div style="flex: 1 1 45%; max-width: 300px; margin: 0 auto;"> <div class="mapouter"> <div class="gmap_canvas"> <iframe width="300" height="300" id="gmap_canvas" src="https:\/\/maps.google.com\/maps\?q=(.*)&amp;t=&amp;z=15&amp;ie=UTF8&amp;iwloc=&amp;output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"><\/iframe> <style> \.mapouter { position: relative; text-align: right; height: 300px; width: 300px; } \.gmap_canvas { overflow: hidden; background: none !important; height: 300px; width: 300px; } <\/style> <\/div> <\/div><\/div> <div class="endereco-telefone"> <p>([\s\S]*?)<\/p> <\/div><\/div>$/,
       fromBlock: function (match) {
         return {
           coordenadas: match[1],
