--- a/admin/index.html
+++ b/admin/index.html
@@ -59,20 +59,6 @@
           widget: 'string'
         },
         {
-          label: 'Botão',
-          name: 'botaobloco',
-          widget: 'string',
-          required: false,
-          default: ''
-        },
-        {
-          label: 'Link do botão',
-          name: 'linkbloco',
-          widget: 'string',
-          required: false,
-          default: ''
-        },
-        {
           label: "Ícone",
           name: "iconebloco",
           widget: "select",
@@ -92,6 +78,51 @@
           required: false
         }
       ],
+      pattern: /^<section class="bloco" id="(.*)"><h2>(.*)<\/h2><p>(.*)<\/p>(.*)<\/section>*$/,
+      fromBlock: function (match) {
+        return {
+          titulobloco: match[1],
+          textobloco: match[3],
+          iconebloco: match[4],
+          linkbloco: match[5],
+          botaobloco: match[6]
+        };
+      },
+      toBlock: function (obj) {
+        return '<section class="bloco" id="' + obj.titulobloco + '"><h2>' + obj.titulobloco + '</h2><p>' + obj.textobloco + '</p>' + obj.iconebloco + '</section>';
+      }
+    });
+
+    /* Bloco Azul com Botão */
+    CMS.registerEditorComponent({
+      id: "blocoazulbotao",
+      label: "Bloco Azul com Botão",
+      fields: [
+        {
+          label: 'Título do bloco',
+          name: 'titulobloco',
+          widget: 'string'
+        },
+        {
+          label: 'Texto do bloco',
+          name: 'textobloco',
+          widget: 'string'
+        },
+        {
+          label: 'Botão',
+          name: 'botaobloco',
+          widget: 'string',
+          required: false,
+          default: ''
+        },
+        {
+          label: 'Link do botão',
+          name: 'linkbloco',
+          widget: 'string',
+          required: false,
+          default: ''
+        }
+      ],
       pattern: /^<section class="bloco" id="(.*)"><h2>(.*)<\/h2><p>(.*)<\/p>(.*)<button><a href="(.*?)">(.*?)<\/a><\/button><\/section>*$/,
       fromBlock: function (match) {
         return {
@@ -104,6 +135,53 @@
       },
       toBlock: function (obj) {
         return '<section class="bloco" id="' + obj.titulobloco + '"><h2>' + obj.titulobloco + '</h2><p>' + obj.textobloco + '</p>' + obj.iconebloco + '<button><a href="' + obj.linkbloco + '">' + obj.botaobloco + '</a></button></section>';
+      }
+    });
+
+    /* Ícone com link */
+    CMS.registerEditorComponent({
+      id: "iconelink",
+      label: "Ícone com Link",
+      fields: [
+        {
+          label: "Ícone",
+          name: "iconebloco",
+          widget: "select",
+          options: [
+            { label: "Universidade", value: '<i class="fas fa-university"></i>' },
+            { label: "Pessoas", value: '<i class="fas fa-users"></i>' },
+            { label: "Lupa", value: '<i class="fas fa-search"></i>' },
+            { label: 'Prancheta', value: '<i class="fas fa-clipboard-list"></i>' },
+            { label: 'Maleta com relógio', value: '<i class="fas fa-business-time"></i>' },
+            { label: 'Foguete', value: '<i class="fas fa-rocket"></i>' },
+            { label: 'Maleta', value: '<i class="fas fa-suitcase"></i>' },
+            { label: 'Pessoas (engrenagem)', value: '<i class="fas fa-users-cog"></i>' },
+            { label: 'Ícone do PDF', value: '<i class="fas fa-file-pdf"></i>' },
+            { label: 'Nenhum', value: ' ' }
+          ],
+          default: [' '],
+          required: false
+        },
+        {
+          label: 'Link do ícone',
+          name: 'linkicone',
+          widget: 'string',
+          required: false,
+          default: ''
+        }
+      ],
+      pattern: /^<a class="url-pdf" href="(.*?)">(.*?)<\/a>$/,
+      fromBlock: function (match) {
+        return {
+          linkicone: match[1],
+          iconebloco: match[2]
+        };
+      },
+      toBlock: function (obj) {
+        return '<a class="url-pdf" href="' + obj.linkicone + '">' + obj.iconebloco + '<\/a>';
+      },
+      toPreview: function (obj) {
+        return '';
       }
     });
 
