Correções e adição da Página Inicial nas configurações

--- a/admin/index.html
+++ b/admin/index.html
@@ -89,7 +89,7 @@
         };
       },
       toBlock: function (obj) {
-        return '<section class="bloco" id="' + obj.titulobloco + '"><h2>' + obj.titulobloco + '</h2><p>' + obj.textobloco + '</p><i ' + obj.iconebloco + ' ></i></section>';
+        return '<section class="bloco" id="' + obj.titulobloco + '"><h2>' + obj.titulobloco + '</h2><p>' + obj.textobloco + '</p><i class="' + obj.iconebloco + '"></i></section>';
       }
     });
 
